ingress.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:5**:certificate/158faa1f-381d-4061-b0bc-04e6cf5a9a03
    alb.ingress.kubernetes.io/group.name: abc
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "300"
    alb.ingress.kubernetes.io/ip-address-type: dualstack
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/subnets: subnet-0f1a986e8**e,subnet-0ee33b82**,subnet-023dfac281807**
    alb.ingress.kubernetes.io/tags: map-migrated=**
    alb.ingress.kubernetes.io/target-type: ip
  name: kafka-ui
  namespace: kafka-ui
spec:
  ingressClassName: alb
  rules:
  - host: kafka-ui.abc.in
    http:
      paths:
      - backend:
          service:
            name: kafka-ui-service
            port:
              number: 80
        path: /
        pathType: Prefix
